examples/test/testpolicy2582.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2582
  namespace: namespace173
spec:
  podSelector:
    matchLabels:
      key49: value0
      key21: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value21
      podSelector:
        matchLabels:
          key39: value36
          key33: value14
          key26: value17
